# Mastering_Distributed_Tracing

./: .gitmodules  .gitmodules.bup  TODO_LIST.txt
Chapter04/cpp/: .build.sh.swp  .gitignore  CMakeLists.txt  Doxyfile  TODO_LIST.txt  build.sh  configure.sh  format.sh  kill.sh  run.sh
Chapter04/cpp/bigbrother_service/: CMakeLists.txt  http_controller.cpp  http_controller.hpp  main.cpp
Chapter04/cpp/bigbrother_service/people/: repository.cpp  repository.hpp
Chapter04/cpp/exercise1/: main.cpp  say_hello_http_controller.cpp  say_hello_http_controller.hpp
Chapter04/cpp/exercise1/people/: repository.cpp  repository.hpp
Chapter04/cpp/formatter_service/: CMakeLists.txt  format_greeting.cpp  format_greeting.hpp  http_controller.cpp  http_controller.hpp  main.cpp
Chapter04/cpp/lib/: CMakeLists.txt
Chapter04/cpp/lib/json/: object.hpp
Chapter04/cpp/lib/model/: person.cpp  person.hpp
Chapter04/cpp/lib/tracing/: create_span.cpp  create_span.hpp  extract.cpp  extract.hpp  init.cpp  init.hpp  inject.cpp  inject.hpp
Chapter04/cpp/lib/util/: error.cpp  error.hpp  source_location.hpp
Chapter04/cpp/main_app/: .say_hello_http_controller.cpp.swp  CMakeLists.txt  format_greeting.cpp  format_greeting.hpp  get_person.cpp  get_person.hpp  hello.cpp  http_controller.cpp  http_controller.hpp  main.cpp  pick_random_greeting.cpp  pick_random_greeting.hpp  say_hello.cpp  say_hello.hpp  say_hello_http_controller.cpp  send_request.cpp  send_request.hpp
Chapter04/go/exercise1/: hello.go
Chapter04/go/exercise1/people/: repository.go
Chapter04/go/exercise3a/: hello.go
Chapter04/go/exercise3a/people/: repository.go
Chapter04/go/exercise3b/people/: repository.go
Chapter04/python/exercise1/: database.py  hello.py
files/Chapter04/cpp/: .gitignore  CMakeLists.txt  TODO_LIST.txt  format.sh  run.sh
files/Chapter04/cpp/exercise1/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp  say_hello_http_controller.cpp  say_hello_http_controller.hpp
files/Chapter04/cpp/exercise1/people/: repository.cpp  repository.hpp
files/Chapter04/cpp/lib/: CMakeLists.txt
files/Chapter04/cpp/lib/model/: person.cpp  person.hpp
files/Chapter04/cpp/lib/tracing/: init.cpp  init.hpp
files/Chapter04/go/exercise1/: hello.go
files/Chapter04/java/: pom.xml
files/Chapter04/java/src/main/java/exercise1/: HelloController.java
